# WikiRacer

./: .gitignore  Cargo.toml  README.md  run_multiple.sh
frontend/: Cargo.toml  LICENSE  README.md
log/: log.txt
scraped_links/: count_duplicates.sh
src/: config.rs  crawler.rs  integration_test.rs  lib.rs  link_graph.rs  main.rs  pathfinder.rs
src/crawler/: config.rs  mod.rs  runner.rs  scrape.rs  state.rs  tests.rs
tests/: integration_test.rs
