[package]
name = "WikiRacer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
log2 = "0.2.1"
reqwest = "0.12.15"
scraper = "0.23.1"
url = "2.5.4"
tokio = {version =  "1.45.1", features = ["full"] }
wiremock = "0.6.3"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
clap = "4.5.38"
blake3 = "1.8.2"
