[package]
name = "WikiRacer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
log2 = "0.2.1"
reqwest = "0.12.15"
scraper = "0.23.1"
url = "2.5.4"
tokio = {version =  "1.45.1", features = ["full"] }
wiremock = "0.6.3"
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.38", features = ["derive"] }
blake3 = "1.8.2"
#Dependencies for visualization:
eframe = "0.26"
egui = "0.26"
petgraph = "0.6"
once_cell = "1.21.3"
